# ChangeLog for net-nds/openldap
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nds/openldap/ChangeLog,v 1.245 2007/01/08 14:07:37 jokey Exp $

  08 Jan 2007; Markus Ullmann <jokey@gentoo.org> openldap-2.1.30-r10.ebuild:
  ssl cert magic

  08 Jan 2007; Jeroen Roovers <jer@gentoo.org> openldap-2.2.28-r7.ebuild:
  Stable for HPPA (bug #159508).

  08 Jan 2007; Jason Wever <weeve@gentoo.org> openldap-2.1.30-r10.ebuild,
  openldap-2.2.28-r7.ebuild, openldap-2.3.30-r2.ebuild:
  Stable on SPARC wrt security bug #159508.

  08 Jan 2007; Jeroen Roovers <jer@gentoo.org> openldap-2.1.30-r10.ebuild:
  Stable for HPPA (bug #159508).

  08 Jan 2007; Jeroen Roovers <jer@gentoo.org> openldap-2.3.30-r2.ebuild:
  Stable for HPPA (bug #159508).

  07 Jan 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  openldap-2.3.30-r2.ebuild:
  Stable on ppc wrt bug #159508.

*openldap-2.3.31-r1 (06 Jan 2007)
*openldap-2.3.30-r2 (06 Jan 2007)
*openldap-2.2.28-r7 (06 Jan 2007)
*openldap-2.1.30-r10 (06 Jan 2007)

  06 Jan 2007; Markus Ullmann <jokey@gentoo.org> -files/gencert.sh,
  +openldap-2.1.30-r10.ebuild, +openldap-2.2.28-r7.ebuild,
  +openldap-2.3.30-r2.ebuild, -openldap-2.3.31.ebuild,
  +openldap-2.3.31-r1.ebuild:
  Fixing enewuser placement, some further quotation (all done now, yey),
  security bug #159508 and add -j1 temporarily until upstream fixes parallel
  make issues

  25 Dec 2006; Markus Ullmann <jokey@gentoo.org> openldap-2.1.30-r9.ebuild,
  openldap-2.2.28-r6.ebuild, openldap-2.3.30-r1.ebuild,
  openldap-2.3.31.ebuild:
  more quotation fixes and fix bug #156090

  23 Dec 2006; Markus Ullmann <jokey@gentoo.org> -files/gencert.sh-2.2.27,
  openldap-2.1.30-r9.ebuild, openldap-2.2.28-r5.ebuild,
  openldap-2.2.28-r6.ebuild, openldap-2.3.30-r1.ebuild,
  openldap-2.3.31.ebuild:
  Ebuild clean up, don't build 2.1 libs when building 2.2, just preserve if
  needed
